# nist-nvd-py

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: mypy.yml  pylint.yml  pytest.yml
nist_nvd/: __init__.py  __main__.py  config.py  validator.py
nist_nvd/scripts/: extract_cpe.py
tests/: example.products.json  example.sources.json  example.vulnerabilities.json  test_generic.py  test_nvd.py  test_validator.py
