[project]
name = "nist-nvd"
version = "0.1.0"
description = "NIST NVD API client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["aiohttp>=3.10.5", "pydantic>=2.8.2"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.2",
    "ruff>=0.6.3",
]
